# http-server-rust

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
crates/app/: Cargo.toml
crates/app/src/: compression.rs  main.rs  routes.rs
crates/app/src/routes/: echo.rs  files.rs  root.rs  user_agent.rs
crates/http-server/: Cargo.toml
crates/http-server-macros/: Cargo.toml
crates/http-server-macros/src/: lib.rs
crates/http-server/src/: error.rs  http.rs  lib.rs  server.rs
crates/http-server/src/http/: headers.rs  request.rs  response.rs  types.rs
crates/http-server/src/server/: middleware.rs  scope.rs
minserver/: Cargo.toml
minserver/src/: error.rs  headers.rs  lib.rs  request.rs  response.rs
minserver/src/headers/: content_type.rs  encoding.rs
src/: error.rs  lib.rs  main.rs  pool.rs  request.rs  response.rs
